# funsketch

./: pyproject.toml
example/: step1.py
src/funsketch/sketch/task/: __init__.py  load.py
